# Housing-Regression-Machine-Learning-Project

./: .gitignore  Dockerfile  README.md  app.py  pyproject.toml  requirements.txt
models/: xgb_model.pkl
notebooks/: 00_data_split.ipynb  02_feature_eng_encoding.ipynb  03_baseline.ipynb  04_linear_regression_regularization.ipynb  05_XGBoost.ipynb  06_hyperparameter_tuning_MLFLow.ipynb  upload_to_gcs.py
src/api/: main.py
src/batch/: run_monthly.py
src/feature_pipeline/: feature_engineering.py  load.py  preprocess.py
src/inference_pipeline/: inference.py
src/training_pipeline/: eval.py  train.py  tune.py
tests/: smoke_test.ipynb  test_features.py  test_inference.py  test_training.py
